--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 * {
     margin: 0;
 }
-
-.wrapper{
-    background-color: rgb(10, 10, 10);
+html{
+     background-color: rgb(10, 10, 10);
     background-image: url(bundo-kim-Pb9bUzH1nD8-unsplash.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    width: 100%;
-    height: 100vmax;
+    background-size: cover;
+}
+
+.wrapper{
+   
+
 
 }
 
@@ -32,7 +35,7 @@ body{
     background-color: rgba(0,0,0,0.5);;
     width: 50%;
     border-radius: 16px;
-    height: 34vmax;
+    height: 100%;
     margin: 0 auto;
     margin-top: 4px;
 
@@ -81,5 +84,13 @@ footer{
         width: 100%;
     }
 .footer {
-    color: rgb(206, 163, 113);
+    color: rgb(185, 185, 185);
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+hr {
+    border-color:rgb(206, 163, 113);
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 15px;
 }
